getLastThreeMonthSale commit